--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
 @import "header.css";
 @import "nav-bar.css";
+@import "friend.css";
 
 *{
     box-sizing: border-box;
@@ -17,4 +18,5 @@ body{
 
 a{
     color: inherit;
+    text-decoration: none;
 }
