--- a/css/friend.css
+++ b/css/friend.css
@@ -10,7 +10,8 @@
 }
 
 .friend__avator.g-avator{
-    width: 70px;
+    width: 65px;
+    height: 65px;
 }
 
 .friend__avator.m-avator{
@@ -44,4 +45,28 @@
 .friend__content .friend__status,
 .friend .chat__timestamp{
     font-size: 12px;
+}
+
+.friend .friend__now-listening{
+    padding: 5px 10px;
+    border-radius: 15px;
+    border: 2px solid #52e084;
+    font-size: 14px;
+}
+
+.friend__now-listening span {
+    opacity: 0.6;
+}
+
+.friend__now-listening i{
+    font-size: 12px;
+}
+
+.friend__add-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f5f5f5;
+    padding: 13px;
+    border-radius: 5px;
 }
