--- a/css/find.css
+++ b/css/find.css
@@ -34,3 +34,12 @@
     opacity: 0.7;
     margin-bottom: 20px;
 }
+
+.friend__add-btn:hover{
+    background-color: rgb(99, 218, 127);
+    color: white;
+}
+
+.friend__add-btn{
+    transition: all 0.2s ease-in-out;
+}
