--- a/css/friend.css
+++ b/css/friend.css
@@ -7,15 +7,18 @@
 .friend .friend__avator{
     width: 50px;
     border-radius: 38%;
+    border: 1px solid #f4f4f4
 }
 
 .friend__avator.g-avator{
     width: 65px;
     height: 65px;
+    border: 1px solid #f4f4f4
 }
 
 .friend__avator.m-avator{
-    width: 60px;
+    width: 55px;
+    border: 1px solid #f4f4f4
 }
 
 .friend .friend__column{
@@ -38,13 +41,14 @@
     opacity: 0.6;
 }
 
-.friend__content .friend__bottom-text{
-    font-size: 14px;
+.friend__content .friend__name{
+    font-size: 16px;
+    font-weight: 700;
 }
 
 .friend__content .friend__status,
 .friend .chat__timestamp{
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .friend .friend__now-listening{
@@ -69,4 +73,20 @@
     background-color: #f5f5f5;
     padding: 13px;
     border-radius: 5px;
+}
+
+.friends__list li{
+    margin-bottom: 20px;
+}
+
+.friend__avator{
+    transition: transform 0.2s ease-in-out;
+}
+
+.friend__avator:hover {
+    transform: scale(1.3);
+}
+
+.nav__list-item .green{
+    color:rgb(99, 218, 127);
 }
