--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -15,6 +15,7 @@
 
 .nav i{
     font-size: 20px;
+    transition: all 0.2s ease-in-out;
 }
 
 .nav .nav__list-link{
@@ -23,15 +24,46 @@
 
 .nav .nav__badge{
     position: absolute;
-    top: -7px;
+    top: -11px;
     right: -7px;
     color: white;
     background-color: #dc5d46;
-    width: 18px;
-    height: 18px;
+    width: 16px;
+    height: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    font-size: 10px;
+    font-size: 11px;
+    z-index: 999;
+    animation: badgemove 2s ease-in-out infinite;
+}
+
+@keyframes badgemove {
+    from{
+        transform: rotate(1turn);
+    }
+    to{
+        transform: rotate(-1turn);
+    }
+}
+
+@keyframes showNavBar {
+    from{
+        transform: translateY(80px);
+    }
+    to{
+        transform: none;
+    }
+}
+
+.nav{
+    transform: translateY(80px);
+    animation: showNavBar 0.5s ease-in-out forwards;
+    animation-delay: 0.2s;
+}
+
+.nav__list-item i:hover {
+    transform: scale(1.2);
+    color: rgb(99, 218, 127);
 }
