--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Gaegu:wght@400;700&display=swap');
 @import "reset.css";
 @import "status-bar.css";
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
 @import "header.css";
 @import "nav-bar.css";
 @import "friend.css";
 @import "friends.css";
 @import "find.css";
 @import "more.css";
+@import "setting.css";
+@import "chat.css";
+@import "mobile.css";
 
 *{
     box-sizing: border-box;
@@ -16,10 +19,25 @@ body{
     background-color: white;
     padding: 10px 20px;
     color: #020202;
-    font-family: 'Open sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Gaegu', cursive;
 }
 
 a{
     color: inherit;
     text-decoration: none;
+}
+
+@keyframes fadeIn{
+    from{
+        opacity: 0;
+        transform: translateY(40px);
+    }
+    to{
+        opacity: 1;
+        transform: none;
+    }
+}
+
+main{
+    animation: fadeIn 0.5s ease-in-out;
 }
