--- a/css/mobile.css
+++ b/css/mobile.css
@@ -4,7 +4,7 @@
     height: 100%;
     top: 0;
     left: 0;
-    background-color: #fce006;
+    background-color: rgb(99, 218, 127);
     display: flex;
     justify-content: center;
     align-items: center;
